# aoc2024

./: .gitignore  aoc2024.cabal  package.yaml
app/: Main.hs  Test.hs
src/: Day1.hs  Day2.hs  Day3.hs
