cabal-version:      2.4
name:               aoc2024
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Day1, Day2, Day3

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, MissingH
        , HUnit >= 1.6
        , containers
        , parsec
        , sort
        , split >=0.2.3.5
        , regex-tdfa
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2024
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        aoc2024,
        MissingH
        , containers
        , parsec
        , sort
        , split >=0.2.3.5
        , regex-tdfa

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app, src
  main-is:             Test.hs
  build-depends:       base >= 4.14 && < 5,
                       HUnit >= 1.6,
                       MissingH,
                       containers,
                       parsec,
                       sort,
                       split >=0.2.3.5
  default-language:    Haskell2010
